--- a/SleepBit2/app/src/main/res/values/colors.xml
+++ b/SleepBit2/app/src/main/res/values/colors.xml
@@ -5,6 +5,13 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#2a3849</color>
+    <color name="black2">#384b61</color>
+    <color name="black3">#537092</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pink">#fbccdd</color>
+    <color name="blue">#8bbbf3</color>
+    <color name="yellow">#feedcb</color>
+    <color name="gray">#d8dee9</color>
+    <color name="blue_100">#7da8db</color>
 </resources>
