--- a/SleepBit2/app/src/main/res/layout/fragment_dashboard.xml
+++ b/SleepBit2/app/src/main/res/layout/fragment_dashboard.xml
@@ -77,5 +77,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/min_sleep" />
 
+    <Button
+        android:id="@+id/clearBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="Clear Data"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/max_sleep_lbl" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
